<resources>
    <string name="app_name">chrRoomDemo_01</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantiry">Product Quantiry</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="find">Find</string>
    <string name="not_assigned">Not Assigned</string>
</resources>
