<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment" android:orientation="vertical">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="10dp">
            <TextView
                    android:text="@string/product_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="18sp"/>
            <TextView
                    android:text="@string/not_assigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/productID" android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="10dp">
            <TextView
                    android:text="@string/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:textSize="18sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/productName" android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="10dp">
            <TextView
                    android:text="@string/product_quantiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="18sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/productQuantity" android:textSize="18sp"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_margin="10dp">
        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/addButton" android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/deleteButton" android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:text="@string/find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/findBurron" android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/product_recycler" android:layout_margin="10dp"/>
</LinearLayout>
